tests/tests/snapshots/test__jsdoc__inline-serde.snap
---
source: tests/tests/jsdoc.rs
assertion_line: 191
expression: output
---
i8: number
i16: number
i32: number
u8: number
u16: number
u32: number
f32: number | null
f64: number | null
bool: boolean
char: string
Range<i32>: {
	start: T,
	end: T,
}
RangeInclusive<i32>: {
	start: T,
	end: T,
}
(): null
(String, i32): [string, number]
(String, i32, bool): [string, number, boolean]
((String, i32), (bool, char, bool), ()): [[string, number], [boolean, string, boolean], null]
(bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool): [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean]
(Vec<i32>, Vec<bool>): [number[], boolean[]]
String: string
PathBuf: string
IpAddr: string
Ipv4Addr: string
Ipv6Addr: string
SocketAddr: string
SocketAddrV4: string
SocketAddrV6: string
Cow<'static, str>: string
Cow<'static, i32>: number
&'static str: string
&'static bool: boolean
&'static i32: number
Vec<i32>: number[]
&'static [i32]: number[]
&'static [i32; 3]: [number, number, number]
[i32; 3]: [number, number, number]
Vec<MyEnum>: MyEnum[]
&'static [MyEnum]: MyEnum[]
&'static [MyEnum; 6]: [MyEnum, MyEnum, MyEnum, MyEnum, MyEnum, MyEnum]
[MyEnum; 2]: [MyEnum, MyEnum]
&'static [i32; 1]: [number]
&'static [i32; 0]: []
Option<i32>: number | null
Option<()>: null
Option<Vec<i32>>: number[] | null
Result<String, i32>: {
	ok: T,
	err: E,
}
Vec<Option<Cow<'static, i32>>>: (number | null)[]
Option<Vec<Cow<'static, i32>>>: number[] | null
[Vec<String>; 3]: [string[], string[], string[]]
Option<Option<String>>: string | null
Option<Option<Option<String>>>: string | null
PhantomData<()>: null
PhantomData<String>: null
Infallible: never
Unit1: null
Unit2: Record<string, never>
Unit3: []
Unit4: null
Unit5: "A"
Unit6: { A: [] }
Unit7: { A: Record<string, never> }
SimpleStruct: {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
}
TupleStruct1: number
TupleStruct3: [number, boolean, string]
TestEnum: "Unit" | ({ Single: number }) & { Multiple?: never; Struct?: never } | ({ Multiple: [number, number] }) & { Single?: never; Struct?: never } | ({ Struct: {
	a: number,
} }) & { Multiple?: never; Single?: never }
RefStruct: TestEnum
InlinerStruct: {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
}
GenericStruct<i32>: {
	arg: T,
}
GenericStruct<String>: {
	arg: T,
}
FlattenEnumStruct: ({
	outer: string,
}) & (FlattenEnum)
OverridenStruct: {
	overriden_field: string,
}
HasGenericAlias: { [key in number]: string }
EnumMacroAttributes: ({ A: string }) & { D?: never; bbb?: never; cccc?: never } | ({ bbb: number }) & { A?: never; D?: never; cccc?: never } | ({ cccc: number }) & { A?: never; D?: never; bbb?: never } | ({ D: {
	a: string,
	bbbbbb: number,
} }) & { A?: never; bbb?: never; cccc?: never }
InlineEnumField: { A: {
	a: string,
} }
InlineOptionalType: {
	optional_field: {
	a: string,
} | null,
}
Rename: "OneWord" | "Two words"
TransparentType: TransparentTypeInner
TransparentType2: null
TransparentTypeWithOverride: string
[Option<u8>; 3]: [(number | null), (number | null), (number | null)]
HashMap<BasicEnum, ()>: Partial<{ [key in BasicEnum]: null }>
HashMap<BasicEnum, i32>: Partial<{ [key in BasicEnum]: number }>
Option<Option<Option<Option<i32>>>>: number | null
Vec<PlaceholderInnerField>: PlaceholderInnerField[]
EnumReferenceRecordKey: {
	a: Partial<{ [key in BasicEnum]: number }>,
}
FlattenOnNestedEnum: ({
	id: string,
}) & (NestedEnum)
MyEmptyInput: Record<string, never>
(String): string
(String,): [string]
ExtraBracketsInTupleVariant: { A: string }
ExtraBracketsInUnnamedStruct: string
Vec<MyEnum>: MyEnum[]
InlineTuple: {
	demo: [string, boolean],
}
InlineTuple2: {
	demo: [{
	demo: [string, boolean],
}, boolean],
}
Box<str>: string
Box<String>: string
SkippedFieldWithinVariant: { type: "A"; data?: null } | { type: "B"; data: string }
KebabCase: {
	"test-ing": string,
}
&[&str]: string[]
Issue281<'_>: {
	default_unity_arguments: string[],
}
LifetimeGenericStruct<'_, i32>: {
	borrowed: T[],
	owned: T[],
}
LifetimeGenericEnum<'_, i32>: ({ Borrowed: T }) & { Owned?: never } | ({ Owned: T }) & { Borrowed?: never }
RenameWithWeirdCharsField: {
	"@odata.context": string,
}
RenameWithWeirdCharsVariant: { "@odata.context": string }
RenamedFieldKeys: {
	"": string,
	"a\"b": string,
	"a\\b": string,
	"line\nbreak": string,
	"line\u2028break": string,
	"line\u2029break": string,
}
RenamedVariantWithSkippedPayload: "a-b"
type_type::Type: never
ActualType: {
	a: GenericType<string>,
}
SpectaTypeOverride: {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
}
ContainerTypeOverrideStruct: string
ContainerTypeOverrideEnum: string
ContainerTypeOverrideGeneric<Box<dyn Any>>: string
ContainerTypeOverrideToGeneric<i32>: T
ContainerTypeOverrideTuple: [string, number]
ContainerTypeOverrideTupleGeneric<i32>: [T, string]
InvalidToValidType: {
	cause: null,
}
TupleStruct: string
TupleStructWithRep: string
GenericTupleStruct<String>: T
BracedStruct: string
Struct: {
	t: "StructNew",
	a: string,
}
Struct2: {
	b: string,
}
Enum: { t: "A" } | { t: "B" }
Enum2: { t: "C" } | { t: "B" } | { t: "D"; enumField: null }
Enum3: { t: "A"; b: string }
StructRenameAllUppercase: {
	A: number,
	B: number,
}
RenameSerdeSpecialChar: {
	"a/b": number,
}
EnumRenameAllUppercase: "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS"
Recursive: {
	demo: Recursive,
}
RecursiveMapValue: {
	demo: { [key in string]: RecursiveMapValue },
}
RecursiveTransparent: RecursiveInline
RecursiveInEnum: { A: {
	demo: RecursiveInEnum,
} }
NonOptional: string | null
OptionalOnNamedField: string | null
OptionalOnTransparentNamedField: {
	b: string | null,
}
OptionalInEnum: ({ A?: string | null }) & { B?: never; C?: never } | ({ B: {
	a: string | null,
} }) & { A?: never; C?: never } | ({ C: {
	a?: string | null,
} }) & { A?: never; B?: never }
UntaggedVariants: string | number | { id: string } | [string, boolean]
UntaggedVariantsWithoutValue: string | [number, string] | number
UntaggedVariantsWithDuplicateBranches: null | number
HashMap<String, ()>: { [key in string]: null }
Regular: { [key in string]: null }
HashMap<Infallible, ()>: { [key in never]: null }
HashMap<TransparentStruct, ()>: { [key in TransparentStruct]: null }
HashMap<UnitVariants, ()>: Partial<{ [key in UnitVariants]: null }>
HashMap<UntaggedVariantsKey, ()>: Partial<{ [key in UntaggedVariantsKey]: null }>
ValidMaybeValidKey: { [key in MaybeValidKey<string>]: null }
ValidMaybeValidKeyNested: { [key in MaybeValidKey<MaybeValidKey<string>>]: null }
MacroStruct: string
MacroStruct2: {
	demo: string,
}
MacroEnum: ({ Demo: string }) & { Demo2?: never } | ({ Demo2: {
	demo2: string,
} }) & { Demo?: never }
DeprecatedType: {
	a: number,
}
DeprecatedTypeWithMsg: {
	a: number,
}
DeprecatedTypeWithMsg2: {
	a: number,
}
DeprecatedFields: {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
}
DeprecatedTupleVariant: [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number]
DeprecatedEnumVariants: 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C"
CommentedStruct: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
}
CommentedEnum: 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ B: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
} }) & { A?: never }
SingleLineComment: 
/**  Some single-line comment */
({ A: number }) & { B?: never } | 
/**  Some single-line comment */
({ B: {
	/**  Some single-line comment */
	a: number,
} }) & { A?: never }
NonGeneric: {
	a: A,
	b: B,
}
HalfGenericA<u8>: {
	a: A,
	b: B,
}
HalfGenericB<bool>: {
	a: A,
	b: B,
}
FullGeneric<u8, bool>: {
	a: A,
	b: B,
}
Another<bool>: {
	a: A,
	b: B,
}
MapA<u32>: { [key in string]: number }
MapB<u32>: { [key in number]: string }
MapC<u32>: { [key in string]: AGenericStruct<number> }
AGenericStruct<u32>: {
	field: {
	a: A,
	b: B,
},
}
A: {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
}
DoubleFlattened: {
	a: ToBeFlattened,
	b: ToBeFlattened,
}
FlattenedInner: (Inner)
BoxFlattened: (BoxedInner)
BoxInline: {
	c: {
		a: number,
	},
}
First: {
	a: string,
}
Second: {
	a: number,
}
Third: ({
	b: { [key in string]: string },
	c: First,
}) & (First)
Fourth: {
	a: First,
	b: {
		a: string,
	},
}
TagOnStructWithInline: {
	type: "TagOnStructWithInline",
	a: First,
	b: {
		a: string,
	},
}
Sixth: {
	a: First,
	b: First,
}
Seventh: {
	a: First,
	b: Second,
}
Eight: { A: string } | "B"
Ninth: { t: "A"; c: string } | { t: "B" } | { t: "C"; c: {
	a: string,
} } | { t: "D"; c: First }
Tenth: string | null | {
	a: string,
} | First
MyEnumTagged: {
	type: "Variant",
} & First
MyEnumExternal: { Variant: {
	inner: First,
} }
MyEnumAdjacent: { t: "Variant"; c: {
	inner: First,
} }
MyEnumUntagged: { inner: First }
EmptyStruct: Record<string, never>
EmptyStructWithTag: {
	a: "EmptyStructWithTag",
}
AdjacentlyTagged: { t: "A" } | { t: "B"; c: {
	id: string,
	method: string,
} } | { t: "C"; c: string }
LoadProjectEvent: { event: "started"; data: {
	projectName: string,
} } | { event: "progressTest"; data: {
	projectName: string,
	status: string,
	progress: number,
} } | { event: "finished"; data: {
	projectName: string,
} }
ExternallyTagged: "A" | ({ B: {
	id: string,
	method: string,
} }) & { C?: never } | ({ C: string }) & { B?: never }
Issue221External: ({ A: {
	a: string,
} }) & { B?: never } | ({ B: {
	b: string,
} }) & { A?: never }
InternallyTaggedD: {
	type: "A",
} & { [key in string]: string }
InternallyTaggedE: { type: "A" }
InternallyTaggedF: { type: "A" }
InternallyTaggedH: { type: "A" }
InternallyTaggedL: {
	type: "A",
} & { type: "A" } | { type: "B" }
InternallyTaggedM: { type: "A" }
Issue221UntaggedSafe: ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never }
Issue221UntaggedMixed: ({ a: string }) & { b?: never; values?: never } | ({ b: string }) & { a?: never; values?: never } | ({ values: { [key in string]: string } }) & { a?: never; b?: never }
EmptyEnum: never
EmptyEnumTagged: never
EmptyEnumTaggedWContent: never
EmptyEnumUntagged: never
SkipOnlyField: Record<string, never>
SkipField: {
	b: number,
}
SkipVariant: { A: string }
SkipUnnamedFieldInVariant: "A" | { B: [number] }
SkipNamedFieldInVariant: ({ A: Record<string, never> }) & { B?: never } | ({ B: {
	b: number,
} }) & { A?: never }
TransparentWithSkip: null
TransparentWithSkip2: string
TransparentWithSkip3: string
SkipVariant2: { tag: "A"; data: string }
SkipVariant3: { A: {
	a: string,
} }
SkipStructFields: {
	a: number,
}
SpectaSkipNonTypeField: {
	a: number,
}
FlattenA: {
	a: number,
	b: number,
}
FlattenB: ({
	c: number,
}) & (FlattenA)
FlattenC: ({
	c: number,
}) & (FlattenA)
FlattenD: {
	a: FlattenA,
	c: number,
}
FlattenE: {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
}
FlattenF: {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
}
FlattenG: {
	b: FlattenB,
	d: number,
}
TupleNested: [number[], [number[], number[]], [number[], number[], number[]]]
Generic1<()>: {
	value: T,
	values: T[],
}
GenericAutoBound<()>: {
	value: T,
	values: T[],
}
GenericAutoBound2<()>: {
	value: T,
	values: T[],
}
Container1: {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
}
Generic2<(), String, i32>: ({ A: A }) & { B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ B: [B, B, B] }) & { A?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ C: C[] }) & { A?: never; B?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ D: A[][][] }) & { A?: never; B?: never; C?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ E: {
	a: A,
	b: B,
	c: C,
} }) & { A?: never; B?: never; C?: never; D?: never; X?: never; Y?: never; Z?: never } | ({ X: number[] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; Y?: never; Z?: never } | ({ Y: number }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Z?: never } | ({ Z: number[][] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never }
GenericNewType1<()>: T[][]
GenericTuple<()>: [T, T[], T[][]]
GenericStruct2<()>: {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: T[][],
	h: ([([T, T]), ([T, T]), ([T, T])])[],
}
InlineGenericNewtype<String>: string
InlineGenericNested<String>: [string, string[], [string, string], { [key in string]: string }, string | null, "Unit" | ({ Unnamed: string }) & { Named?: never } | ({ Named: {
	value: string,
} }) & { Unnamed?: never }]
InlineFlattenGenericsG<()>: {
	t: T,
}
InlineFlattenGenerics: ({
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
}) & (InlineFlattenGenericsG<string>)
GenericDefault: {
	value: T,
}
ChainedGenericDefault: {
	first: T,
	second: U,
}
ChainedGenericDefault<String, String>: {
	first: T,
	second: U,
}
ChainedGenericDefault<i32>: {
	first: T,
	second: U,
}
ChainedGenericDefault<String, i32>: {
	first: T,
	second: U,
}
GenericDefaultSkipped: {
	value: T,
}
GenericDefaultSkippedNonType: {
	value: number,
}
GenericParameterOrderPreserved: {
	pair: Pair<number, string>,
}
ConstGenericInNonConstContainer: {
	data: [number],
	a: [number, number],
	d: [number, number],
}
ConstGenericInConstContainer: {
	data: number[],
	a: number[],
	d: [number, number],
}
NamedConstGenericContainer: {
	a: NamedConstGeneric,
	b: NamedConstGeneric,
	d: [number, number],
}
InlineConstGenericContainer: {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
	},
	d: [number, number],
}
InlineRecursiveConstGenericContainer: {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	d: [number, number],
}
TestCollectionRegister: never
TestCollectionRegister: never
specta_typescript::Any: any
specta_typescript::Any<String>: any
specta_typescript::Unknown: unknown
specta_typescript::Unknown<String>: unknown
specta_typescript::Never: never
specta_typescript::Never<String>: never
specta_typescript::Number: number
specta_typescript::Number<i128>: number
specta_typescript::BigInt: bigint
specta_typescript::BigInt<i128>: bigint
